crates/reap-pm-live/tests/ui/pm_mutation_authorities_cannot_be_forged.stderr
error[E0451]: field `facts` of struct `ApprovedPmQuote` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:11:31
   |
11 |     let _ = ApprovedPmQuote { facts: value() };
   |                               ^^^^^ private field

error[E0451]: field `facts` of struct `ReservedPmQuote` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:12:31
   |
12 |     let _ = ReservedPmQuote { facts: value() };
   |                               ^^^^^ private field

error[E0451]: fields `facts`, `journal_sequence` and `command` of struct `PreparedPmQuote` are private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:14:9
   |
13 |     let _ = PreparedPmQuote {
   |             --------------- in this type
14 |         facts: value(),
   |         ^^^^^ private field
15 |         journal_sequence: 1,
   |         ^^^^^^^^^^^^^^^^ private field
16 |         command: value(),
   |         ^^^^^^^ private field

error[E0451]: field `facts` of struct `ApprovedPmCancel` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:18:32
   |
18 |     let _ = ApprovedPmCancel { facts: value() };
   |                                ^^^^^ private field

error[E0451]: field `facts` of struct `ReservedPmCancel` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:19:32
   |
19 |     let _ = ReservedPmCancel { facts: value() };
   |                                ^^^^^ private field

error[E0451]: fields `facts`, `journal_sequence` and `command` of struct `PreparedPmCancel` are private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:21:9
   |
20 |     let _ = PreparedPmCancel {
   |             ---------------- in this type
21 |         facts: value(),
   |         ^^^^^ private field
22 |         journal_sequence: 1,
   |         ^^^^^^^^^^^^^^^^ private field
23 |         command: value(),
   |         ^^^^^^^ private field

error: type `reap_pm_live::coordinator::authority::PmQuoteAuthorityFacts` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:11:38
   |
11 |     let _ = ApprovedPmQuote { facts: value() };
   |                                      ^^^^^^^ private type

error: type `reap_pm_live::coordinator::authority::PmQuoteAuthorityFacts` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:12:38
   |
12 |     let _ = ReservedPmQuote { facts: value() };
   |                                      ^^^^^^^ private type

error: type `reap_pm_live::coordinator::authority::PmQuoteAuthorityFacts` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:14:16
   |
14 |         facts: value(),
   |                ^^^^^^^ private type

error: type `reap_pm_live::coordinator::authority::PmCancelAuthorityFacts` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:18:39
   |
18 |     let _ = ApprovedPmCancel { facts: value() };
   |                                       ^^^^^^^ private type

error: type `reap_pm_live::coordinator::authority::PmCancelAuthorityFacts` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:19:39
   |
19 |     let _ = ReservedPmCancel { facts: value() };
   |                                       ^^^^^^^ private type

error: type `reap_pm_live::coordinator::authority::PmCancelAuthorityFacts` is private
  --> tests/ui/pm_mutation_authorities_cannot_be_forged.rs:21:16
   |
21 |         facts: value(),
   |                ^^^^^^^ private type
